<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PassengerWindow</class>
 <widget class="QMainWindow" name="PassengerWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1290</width>
    <height>834</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <pointsize>12</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>Пассажиры</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>720</y>
      <width>1271</width>
      <height>32</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="add_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Добавить</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="delete_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Удалить</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="change_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Изменить</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QLabel" name="title_label">
    <property name="geometry">
     <rect>
      <x>540</x>
      <y>10</y>
      <width>200</width>
      <height>30</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>200</width>
      <height>30</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>200</width>
      <height>30</height>
     </size>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>Пассажиры</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>60</y>
      <width>1269</width>
      <height>129</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>175</width>
      <height>0</height>
     </size>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="4">
      <widget class="QLineEdit" name="name_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="0" column="3">
      <widget class="QLabel" name="surname_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Фамилия</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="5">
      <widget class="QLineEdit" name="patronym_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="0" column="2">
      <widget class="QLabel" name="date_passport_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Дата выдачи
паспорта</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="5">
      <widget class="QLabel" name="patronym_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Отчество</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="2">
      <widget class="QLineEdit" name="date_passport_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="0" column="4">
      <widget class="QLabel" name="name_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Имя</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLabel" name="place_passport_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Место выдачи
паспорта</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="num_passport_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Номер паспорта</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="3">
      <widget class="QLineEdit" name="surname_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="place_passport_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLineEdit" name="num_passport_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="0" column="6">
      <widget class="QLabel" name="birthday_label">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Дата рождения</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="6">
      <widget class="QLineEdit" name="birthday_edit">
       <property name="minimumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>175</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QTableView" name="passenger_table">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>200</y>
      <width>1270</width>
      <height>510</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="sortingEnabled">
     <bool>true</bool>
    </property>
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>178</number>
    </attribute>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1290</width>
     <height>33</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
